<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:layout_marginTop="20dip">
		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
				android:minEms="5" android:text="@string/result_tip_lbl_txt"
				android:id="@+id/result_tip_lbl"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="0.00"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="right" android:id="@+id/result_tip_fld"></TextView>
		</TableRow>
		<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/result_total_lbl" android:text="@string/result_total_lbl_txt"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="0.00"
				android:textStyle="bold" android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="right" android:id="@+id/result_total_fld"></TextView>
		</TableRow>
		<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginBottom="20dip">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/result_split_lbl" android:text="@string/result_split_lbl_txt"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="0.00"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="right" android:id="@+id/result_split_fld"></TextView>
		</TableRow>
	</TableLayout>
</LinearLayout>